# cbir4RS

./: .gitignore  README.md  class.txt  class_128.txt  class_common12.txt  train_command.sh  train_command.txt
caffe/: Makefile  Makefile.config  nohup.out  output_cla.txt
caffe/tools/: extract_features.cpp
cmp/ImgSearch/: CMakeLists.txt  ImgSearch  ImgSearch.cbp  main.cpp  main_GLCM.cpp  main_bovw.cpp  main_glcm.cpp
cmp/bovw/: classify.py  learn.py  sift.py  tmp.pgm
cmp/color_cbir/: CMakeLists.txt  color_cbir.cbp  main  main.cpp
cmp/glcm/: img_feature.txt
color_cbir/: main.cpp
feat_extra/: class_val_alex.prototxt  class_val_alex_hash.prototxt  class_val_resnet_hash.prototxt  class_val_vgg16.prototxt  class_val_vgg16_hash.prototxt  for_fish.txt  for_head.txt  rs_simi.txt  rs_simi_alex.txt  rs_simi_alex_10.txt  rs_simi_alex_hash128_10.txt  rs_simi_alex_hash48_10.txt
feat_extra/RSI-CB128/: class_val_alex.prototxt  class_val_alex_hash.prototxt  class_val_vgg16.prototxt  class_val_vgg16_pretrain.prototxt  rs_simi_vgg16.txt  rs_simi_vgg16_pretrain.txt
feat_extra/RSI-CB256/: class_val.prototxt.txt  class_val_alex.prototxt.txt  class_val_alex_hash.prototxt  class_val_googlenet_hash.prototxt  class_val_vgg16.prototxt  class_val_vgg16_hash.prototxt  googlenet_hash128.log.txt  rs_simi_alex_10.txt  rs_simi_alex_hash128_10.txt  rs_simi_alex_hash48_10.txt  vgg16_hash128.log.txt
feat_extra/common-12/: class_val_vgg16.prototxt  class_val_vgg16_hash.prototxt  rs_simi_vgg16_hash128.txt  rs_simi_vgg16_hash128_fc7.txt  rs_simi_vgg16_hash128_same.txt  stat.py  (+3 more)
(+42 files in other folders)
